Fixing spacing for love letter author image.

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -75,7 +75,6 @@ $base-font-size: 14 !default;
 @mixin author-image($mobile) {
   display: inline-block;
   width: 12vw;
-  margin-right: $spacing;
   border-radius: 60px;
   vertical-align: middle;
   max-width: 50px;
@@ -257,4 +256,3 @@ $base-font-size: 14 !default;
     }
   }
 }
-
